--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dates and times</title>
   </head>
   <body>
+    <div class="clock"></div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
